--- a/src/template.html
+++ b/src/template.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="./index.js" type="module"></script>
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>Home</button>
+            <button id="home-btn">Home</button>
+            <button id="menu-btn">Menu</button>
+            <button id="about-btn">About</button>
         </nav>
     </header>
     <div id="content"></div>
